--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "md5": "^2.3.0",
-    "mongoose": "^5.13.6",
-    "mongoose-encryption": "^2.1.0"
+    "mongoose": "^5.13.6"
   }
 }
